--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,11 @@
       "dest": "/"
     },
     {
-      "src": "/(.*)",
+      "src": "/login",
+      "dest": "/"
+    },
+    {
+      "src": "/signup",
       "dest": "/"
     }
   ]
