--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,1 @@
-{
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/"
-    },
-    {
-      "src": "/login",
-      "dest": "/"
-    },
-    {
-      "src": "/signup",
-      "dest": "/"
-    }
-  ]
-}
+{ "rewrites": [ {"source": "/(.*)", "destination": "/"} ] }
